# NAffinity

./: .gitignore  LICENSE  README.md  environment.yml  ligand_extraction.py  naffinity.joblib  naffinity.py  pyproject.toml  rdkit_features.py  receptor_descriptors.py
data/: naffinity_dataset.csv
example/3GAO_expected_output/: descriptors.txt  electro_hydro.txt  naffinity_predicted_binding_class.txt  rdkit.txt
example/3GAO_expected_output 2/: 3GAO_lig.sd  descriptors.txt  electro_hydro.txt  receptor_descriptors.txt
model/: naffinity.joblib
src/naffinity/: __init__.py  batch.py  cli.py  pipeline.py
src/naffinity/steps/: descriptors.py  electro_hydro.py  ligand_extraction.py  naffinity_predict.py  rdkit_features.py  receptor_descriptors.py
src/naffinity/steps/legacy/: descriptors.py  electro_hydro.py
tests/: test_cli.py  test_pipeline.py
training/: hyperparameter_search.ipynb  train_naffinity.ipynb
